--- a/정리/C++ 정리-02.md
+++ b/정리/C++ 정리-02.md
@@ -27,4 +27,11 @@ virtual 키워드를 메소드에 작성할 경우 객체의 마지막 오버라
 36. 순수가상함수 : 공통된 기준에 맞추기 위해서 몸체는 없지만 정의 되어있는 가상 함수
 37. 가상 소멸자 : 소멸자도 virtual로 선언함으로써 상위 소멸자만 호출하더라도 하위 소멸자도 전부 호출한다.  
 38. 참조자의 참조가능성(다형성) : 상위 자료형 참조자를 이용해서도 하위 객체를 참조할 수 있다.   
-
+39. 함수에 대한 이해 : 함수는 논리적으로는 객체안에 존재하는 형태이지만        
+물리적으로는 어느 메모리에 할당되어있고 식별자를 통해 이를 참조하는 것이다.         
+그렇기에 가상함수를 사용하여 오버라이딩한 함수의 메모리를 접근한다고 보면 된다.     
+40. 가상상속 : 우선 가상 함수와 아무 관련이 없다.       
+가상 상속은 C언어에서의 ifndef와 비슷한 원리이다.       
+절차 지향 언어는 위에서부터 순차적으로 내려오는 구조인데       
+가상 상속은 내가 이미 상속을 받은 객체를 또 상속 받으면 이를 막아주는 역할을 한다.   
+ 
