Update 11 연산자 오버로딩2.md

--- a/11 연산자 오버로딩2.md
+++ b/11 연산자 오버로딩2.md
@@ -3,23 +3,31 @@
 # 1. 반드시 해야 하는 대입 연산자의 오버로딩
 ## 1.1. 객체간 대입 연산의 비밀: 디폴트 대입 연산자      
 기존에 생성된 객체를 가지고 기존의 객체를 초기화 하는 경우에 사용된다.        
-```opertator=()``` 으로 따로 메소드를 정의하지 않으면 디폴트 대입 연산자가 호출된다.     
+```opertator=()``` 으로 따로 메소드를 정의하지 않으면 디폴트 대입 연산자가 호출된다. 
+    
+![cpp68](https://user-images.githubusercontent.com/50267433/75637660-3f364a00-5c6b-11ea-9fa2-efa322484945.PNG)   
+    
 디폴트 대입 연산자는 멤버 변수에 따라 알맞게 정의 되어진다.     
     
 ## 1.2. 디폴트 대입 연산자의 문제점
 만약 멤버 변수에서 포인터 변수로 참조를 하는 경우 디폴트 대입 연산자를 사용할 경우 문제점이 생긴다.     
 멤버가 복사가 되는 것이므로 참조하는 주소값을 복사가 되어지고       
 이로 인해 2개의 객체의 멤버가 같은 메모리를 가리키는 얕은 복사의 문제가 발생한다.      
-   
+    
+![cpp71](https://user-images.githubusercontent.com/50267433/75637793-d7343380-5c6b-11ea-8d0e-091afcfede5e.PNG)   
+     
 이를 해결하고자 깊은 복사를 위한 복사 생성자와 유사하게 코드를 작성해주면 된다.  
 단, 차이점은 메모리 누수를 위한 멤버 변수 delete 구문이 추가 되었다.  
    
 ## 1.3. 상속 구조에서의 대입 연산자 호출   
-디폴트 대입 연산자는 기초 클래스의 대입 연산자를 호출해준다.(이 부분은 매우 똑똑하다)             
+디폴트 대입 연산자는 기초 클래스의 대입 연산자를 호출해준다.(이 부분은 매우 똑똑하다)         
+![cpp69](https://user-images.githubusercontent.com/50267433/75639744-a527cf00-5c75-11ea-93cb-8d8e8a3593d2.PNG)      
 그러니 명시적으로 대입 연산자를 정의하게 되면, 기초 클래스의 대입 연산자 호출도 별도로 명시해주어야 한다.       
 
 ## 1.4. 이니셜라이저의 성능 향상 도움
 이니셜라이저를 이용해서 멤버를 초기화하면, 함수 호출의 수를 1회 줄일 수 있다.     
+    
+![cpp70](https://user-images.githubusercontent.com/50267433/75639790-d56f6d80-5c75-11ea-936f-68b89dfb1514.PNG)   
        
 생성자 내에서 ```=```를 사용하는 것도 연산자 오버로딩 함수를 실행 한것으로 총 2번의 함수 호출이 일어난 것이다.       
 반대로 이니셜라이저를 사용하면 생성과 동시에 초기화를 진행하므로 1회만 호출된 것으로 볼 수 있다.        
