--- a/11 연산자 오버로딩2.md
+++ b/11 연산자 오버로딩2.md
@@ -34,22 +34,31 @@
       
 *** 
 # 2. 배열의 인덱스 연산자 오버로딩 
-## 2.1. 배열보다 나은 배열 클래스
-배열 클래스를 기반으로 생성되는 배열 객체는 배열과 동일한 기능을 하되, 경계검사의 기능을 추가한 객체이다.     
+## 2.1. 배열보다 나은 배열 클래스   
+배열보다 배열 클래스의 나은점은 개발자가 기능을 추가적으로 구현할 수 있다는 점이다.    
+![cpp72](https://user-images.githubusercontent.com/50267433/75640711-4fedbc80-5c79-11ea-81e4-f1439efb26d5.PNG)     
+예를 들면 배열의 범위를 넘어선 인덱스 값을 사용하더라도      
+포인터 연산으로 진행되기에 에러 없이 실행 된다는 문제점이 있다.     
+
+하지만 이러한 문제점을 배열 클래스를 이용하여 해결해 줄 수 있다.
+배열 클래스를 정의할 때 경계 검사 코드를 추가로 삽입하여 이러한 문제점을 해결할 수 있다는 것이다.    
+
+그리고 이러한 배열 클래스는 ```[]```연산자 오버로딩을 작성하여 배열과 유사하게 이용할 수 있다.  
     
-연산자 오버로딩을 통해서 다음과 같이 배열처럼 접근이 가능한 객체이다.   
 ```
 arrObject[2];
 ```
-이는 다음과 같이 해석이 된다.  
+연산자 오버로딩을 통해서 다음과 같이 배열처럼 접근이 가능한 객체의 모습이다.      
+
 ```
 arrObject.operator[](2);
 ```
-때문에 다음의 형태로 오버로딩 해야한다.  
+이는 위와 같이 해석이 된다.  
+
 ```
 int operator[] (int index){......}
-```
-아마도 위의 코드에서는 index숫자에 해당하는 배열 요소중 하나를 반환할 것이다.  
+```   
+때문에 ```[]```연산자는 아래와 같이 오버로딩 해야한다.    
 
 ## 2.2. 배열 클래스의 안전성 확보   
 배열은 저장소의 일종이고, 저장소에 저장된 데이터는 유일성이 보장되어야 하기 때문에     
