--- a/11 연산자 오버로딩2.md
+++ b/11 연산자 오버로딩2.md
@@ -60,8 +60,18 @@ int operator[] (int index){......}
 ```   
 때문에 ```[]```연산자는 아래와 같이 오버로딩 해야한다.    
    
+## 2.2. 배열 클래스의 예
+앞서 설명한 경계 검사를 추가해주었다.  
+
 ![cpp73](https://user-images.githubusercontent.com/50267433/75641125-8e37ab80-5c7a-11ea-87ef-7cb2790e3159.PNG)
-      
+
+**경계 검사**
+```
+if(idx < 0 || idx >= arrlen){
+    cout<<"Array index out of bound Exception"<<endl;
+    exit(1);
+}
+```
 ## 2.2. 배열 클래스의 안전성 확보   
 배열은 저장소의 일종이고, 저장소에 저장된 데이터는 유일성이 보장되어야 하기 때문에     
 배열 객체를 대상으로 하는 복사와 관련된 연산은 모두 불가능하게 해야 할 필요도 있다.(물론 상황에 따라서)      
