--- a/11 연산자 오버로딩2.md
+++ b/11 연산자 오버로딩2.md
@@ -72,10 +72,11 @@ if(idx < 0 || idx >= arrlen){
 }
 ```
 ## 2.2. 배열 클래스의 안전성 확보   
-배열은 저장소의 일종이고, 저장소에 저장된 데이터는 유일성이 보장되어야 하기 때문에     
-배열 객체를 대상으로 하는 복사와 관련된 연산은 모두 불가능하게 해야 할 필요도 있다.(물론 상황에 따라서)      
-   
-   
+배열은 저장소의 일종이고, 저장소에 저장된 데이터는 유일성이 보장되어야 하기 때문에        
+배열 객체를 대상으로 하는 복사와 관련된 연산은 모두 불가능하게 해야 할 필요도 있다.(물론 상황에 따라서)        
+     
+![cpp74](https://user-images.githubusercontent.com/50267433/75641737-a27ca800-5c7c-11ea-80bc-9c1f7bdacf69.PNG)   
+      
 ```
 arr = cpy1                    ->    X
 또는
