--- a/11 연산자 오버로딩2.md
+++ b/11 연산자 오버로딩2.md
@@ -71,19 +71,22 @@ if(idx < 0 || idx >= arrlen){
     exit(1);
 }
 ```
-## 2.2. 배열 클래스의 안전성 확보   
-배열은 저장소의 일종이고, 저장소에 저장된 데이터는 유일성이 보장되어야 하기 때문에        
-배열 객체를 대상으로 하는 복사와 관련된 연산은 모두 불가능하게 해야 할 필요도 있다.(물론 상황에 따라서)        
-     
+## 2.2. 배열 클래스의 안전성 확보 
+배열은 저장소의 일종이고, (데이터를 저장했는데 이를 복사하는 것은 철학에 안맞음)       
+저장소에 저장된 데이터는 유일성이 보장되어야 하기 때문에 ```배열 = 배열``` 복사는 불가능 하다.        
+               
+배열 객체를 대상으로 하는 복사와 관련된 연산은 모두 불가능하게 해야 할 필요도 있다.  
+(물론 상황에 따라서 복사를 해야 된다면 따로 방법을 마련해두자)                
+```
+SampleClassArray arr = cpy    ->    X   : 복사 생성자  
+arr = cpy1                    ->    X   : 대입 연산자
+```   
+    
 ![cpp74](https://user-images.githubusercontent.com/50267433/75641737-a27ca800-5c7c-11ea-80bc-9c1f7bdacf69.PNG)   
       
-```
-arr = cpy1                    ->    X
-또는
-SampleClassArray arr = cpy    ->    X
-```   
-이렇듯 배열을 복사하거나 생성시 할당 초기화가 되지 않도록 처리를 해주고자  
-복사와 관련된 연산의 제한을 위해서 복사 생성자와 대입 연산자를 ```private``` 로 선언한다.
+     
+이렇듯 배열을 복사하거나 생성시 할당 초기화가 되지 않도록 처리를 해주고자     
+복사와 관련된 연산의 제한을 위해서 복사 생성자와 대입 연산자를 ```private``` 로 선언한다.  
 
 ## 2.3. const 함수를 이용한 오버로딩의 활용   
 함수의 const 유무는 함수 오버로딩의 조건이 된다.      
