Update 11 연산자 오버로딩2.md

--- a/11 연산자 오버로딩2.md
+++ b/11 연산자 오버로딩2.md
@@ -81,7 +81,7 @@ if(idx < 0 || idx >= arrlen){
 SampleClassArray arr = cpy    ->    X   : 복사 생성자  
 arr = cpy1                    ->    X   : 대입 연산자
 ```   
-    
+     
 ![cpp74](https://user-images.githubusercontent.com/50267433/75641737-a27ca800-5c7c-11ea-80bc-9c1f7bdacf69.PNG)   
       
      
@@ -90,14 +90,21 @@ arr = cpy1                    ->    X   : 대입 연산자
 
 ## 2.3. const 함수를 이용한 오버로딩의 활용   
 함수의 const 유무는 함수 오버로딩의 조건이 된다.      
-    
-const 참조자로 참조하는 경우의 함수 호출을 위해서 정의된 함수!     
-그런데 이 함수를 대상으로는 맴버변수의 값을 변경할 수 없으니,      
-const로 선언되지 않은다음 함수가 추가로 정의 되어야 한다.     
-        
-그래서 일반적으로 operator[] 함수는 const 함수와 일반함수가 동시에 정의된다.        
-    
-***
+       
+![cpp75](https://user-images.githubusercontent.com/50267433/75642235-1cf9f780-5c7e-11ea-9e6e-1b88189e1c7c.PNG)  
+      
+
+const 함수를 정의하는 경우는 단순히 함수 호출을 위해서이다.  
+const 배열 클래스에서 인덱스를 이용하여 값을 얻더라도 변경이 불가능 해야하므로 const 메소드가 정의되어야 한다.    
+  
+반대로 일반 배열 클래스에서는 이러한 인덱스를 이용해서 값을 변경하는 일이 주된 목적일 것이다.    
+그렇기에 const 함수가 아닌 다른 일반 함수를 정의 해주어야 하며       
+반환형을 참조자 형태로 주어 실제 메모리 접근인 call-by-reference가 진행되도록 해주어야 한다.           
+(일반 자료형으로 하면 복사가 이루어지기 때문에 값을 변경해도 변경이 일어나지 않는다.)            
+       
+결론을 말하자면 일반적으로 operator[] 함수는 const 함수와 일반함수가 동시에 정의하자.        
+      
+***  
 # 3. 대주제
 > 인용
 ## 3.1. 소 주제
