--- a/11 연산자 오버로딩2.md
+++ b/11 연산자 오버로딩2.md
@@ -162,7 +162,27 @@ new 연산자와 delete 연ㅅ나자를 오버로딩 하고 있는 함수가 자
 ```delete``` 연산자의 오버로딩은 '해제'를 위한 정의를 해주면 된다.       
 소멸자에 대한 호출은 delete에서 알아서 할 것이다.     
    
-## 3.3. new 연산자 오버로딩에 대한 상세한 이해   
+## 3.3. operator new & operator new []  
+**2 가지 형태의  new 연산자 오버로딩**    
+```
+void * operator new (size_t size) {. . . . . .}
+void * operator new[] (size_t size) {. . . . . .}
+```
+우리는 ```new``` 연산자를 기준으로   
+**하나의 데이터를 대상**으로 또는     
+**배열의 형태로 클래스를 대상**으로 작성할 수 있다.  
+
+![cpp80](https://user-images.githubusercontent.com/50267433/75660162-a4f7f580-5cae-11ea-99b5-c0898168a2cf.PNG)
+
+
+하지만 ```delete``` 연산자일 경우 조금 다르다.     
+단순 ```delete``` 문 에서는 ```delete 객체;```를 사용할 것 같지만      
+실상은 ```delete []객체```형태이다 왜 그럴까?     
+   
+사실 우리는 ```new```연산자에서 **바이트 단위의 배열**로 메모리를 할당해주었다.    
+그렇기에 1개의 객체라고 하더라도 이는 바이트 단위의 메모리로 생성이 되었기에      
+해제할 때도 마찬가지로 배열 형태로 해제를 진행해주어야 한다.      
+      
 ## 3.4. new 연산자 오버로딩에 대한 상세한 이해   
 ## 3.5. new 연산자 오버로딩에 대한 상세한 이해   
 ## 3.6. new 연산자 오버로딩에 대한 상세한 이해   
