Update 11 연산자 오버로딩2.md

--- a/11 연산자 오버로딩2.md
+++ b/11 연산자 오버로딩2.md
@@ -183,7 +183,8 @@ void * operator new[] (size_t size) {. . . . . .}
 그렇기에 1개의 객체라고 하더라도 이는 바이트 단위의 메모리로 생성이 되었기에      
 해제할 때도 마찬가지로 배열 형태로 해제를 진행해주어야 한다.      
       
-## 3.4. new 연산자 오버로딩에 대한 상세한 이해   
+## 3.4. 포인터 연산자 오버로딩      
+
 ## 3.5. new 연산자 오버로딩에 대한 상세한 이해   
 ## 3.6. new 연산자 오버로딩에 대한 상세한 이해   
 ## 3.7. new 연산자 오버로딩에 대한 상세한 이해   
