--- a/11 연산자 오버로딩2.md
+++ b/11 연산자 오버로딩2.md
@@ -183,8 +183,21 @@ void * operator new[] (size_t size) {. . . . . .}
 그렇기에 1개의 객체라고 하더라도 이는 바이트 단위의 메모리로 생성이 되었기에      
 해제할 때도 마찬가지로 배열 형태로 해제를 진행해주어야 한다.      
       
-## 3.4. 포인터 연산자 오버로딩      
+## 3.4. 포인터 연산자 오버로딩         
+포인터 연산자라는 것은 ```->```와 ```*``` 연산자를 의미하는 것이다.     
+         
+![cpp81](https://user-images.githubusercontent.com/50267433/75660909-b8579080-5caf-11ea-9330-dd1d1792bf16.PNG)    
+          
+```*```연산자는 이미 곱셈 연산에서 진행될 수 있다.     
+하지만 여기서 보면 매개변수가 void 형태로 두개의 피연산자를 가지는 ```*```과는 겹치지 않을 것이다.  
 
+```->```와 ```*```의 차이점은         
+```->```는 포인터 대상을 포인터로 반환하고    
+```*```는 포인터 대상의 값 메모리를 참조자 형태로 반환한다.        
+
+그렇다면 여기서 ```->```연산자를 사용했을시 멤버 변수와 함수에 접근하는 방법은 무엇일까?      
+바로 이렇게 반환된 포인터 대상을 통해서 **약속**으로 알맞는 변수나 함수를 리턴한다.          
+      
 ## 3.5. new 연산자 오버로딩에 대한 상세한 이해   
 ## 3.6. new 연산자 오버로딩에 대한 상세한 이해   
 ## 3.7. new 연산자 오버로딩에 대한 상세한 이해   
