--- a/11 연산자 오버로딩2.md
+++ b/11 연산자 오버로딩2.md
@@ -184,20 +184,33 @@ void * operator new[] (size_t size) {. . . . . .}
 해제할 때도 마찬가지로 배열 형태로 해제를 진행해주어야 한다.      
       
 ## 3.4. 포인터 연산자 오버로딩         
-포인터 연산자라는 것은 ```->```와 ```*``` 연산자를 의미하는 것이다.     
-         
-![cpp81](https://user-images.githubusercontent.com/50267433/75660909-b8579080-5caf-11ea-9330-dd1d1792bf16.PNG)    
-          
-```*```연산자는 이미 곱셈 연산에서 진행될 수 있다.     
-하지만 여기서 보면 매개변수가 void 형태로 두개의 피연산자를 가지는 ```*```과는 겹치지 않을 것이다.  
-
-```->```와 ```*```의 차이점은         
-```->```는 포인터 대상을 포인터로 반환하고    
-```*```는 포인터 대상의 값 메모리를 참조자 형태로 반환한다.        
-
-그렇다면 여기서 ```->```연산자를 사용했을시 멤버 변수와 함수에 접근하는 방법은 무엇일까?      
-바로 이렇게 반환된 포인터 대상을 통해서 **약속**으로 알맞는 변수나 함수를 리턴한다.          
+포인터 연산자라는 것은 ```->```와 ```*``` 연산자를 의미하는 것이다.          
+           
+![cpp81](https://user-images.githubusercontent.com/50267433/75660909-b8579080-5caf-11ea-9330-dd1d1792bf16.PNG)      
+             
+```*```연산자는 이미 곱셈 연산에서 진행될 수 있다.       
+하지만 여기서 보면 매개변수가 void 형태로 두개의 피연산자를 가지는 ```*```과는 겹치지 않을 것이다.     
+     
+```->```와 ```*```의 차이점은            
+```->```는 포인터 대상을 포인터로 반환하고      
+```*```는 포인터 대상의 값 메모리를 참조자 형태로 반환한다.          
+       
+그렇다면 여기서 ```->```연산자를 사용했을시 멤버 변수와 함수에 접근하는 방법은 무엇일까?            
+바로 이렇게 반환된 포인터 대상을 통해서 **약속**으로 알맞는 변수나 함수를 리턴한다.                  
+               
+즉, ```num->showData();```일 경우 ```(num.operator->()).showData();``` 형태가 되는 것이다.                 
+              
+```*```도 마찬가지이다 ```(*num)=30```같은 경우 ```(num.operator*())=30```으로 해석이 된다.             
+  
+## 3.5. 스마트 포인터 
+포인터 처럼 동작하는,              
+포인터보다 다소 똑똑하게 동작하는 객체를 가리켜 스마트 포인터라 한다.                  
+           
+ ![cpp82](https://user-images.githubusercontent.com/50267433/75664173-5f8af680-5cb5-11ea-97a6-b8b26f51eb11.PNG)      
+           
+위의 스마트 포인터는 자신이 참조하는 객체의 소멸을 대신해주는 똑똑한 포인터이다.                        
+쉽게 말하면 포인터처럼 동작하게끔 만든 클래스이자 객체이다.            
+대신 개발자가 세부적으로 정의를 할 수 있으므로 똑똑한 포인터라고 명칭한 것이다.           
       
-## 3.5. new 연산자 오버로딩에 대한 상세한 이해   
 ## 3.6. new 연산자 오버로딩에 대한 상세한 이해   
 ## 3.7. new 연산자 오버로딩에 대한 상세한 이해   
