Update 11 연산자 오버로딩2.md

--- a/11 연산자 오버로딩2.md
+++ b/11 연산자 오버로딩2.md
@@ -203,14 +203,24 @@ void * operator new[] (size_t size) {. . . . . .}
 ```*```도 마찬가지이다 ```(*num)=30```같은 경우 ```(num.operator*())=30```으로 해석이 된다.             
   
 ## 3.5. 스마트 포인터 
-포인터 처럼 동작하는,              
-포인터보다 다소 똑똑하게 동작하는 객체를 가리켜 스마트 포인터라 한다.                  
-           
- ![cpp82](https://user-images.githubusercontent.com/50267433/75664173-5f8af680-5cb5-11ea-97a6-b8b26f51eb11.PNG)      
-           
-위의 스마트 포인터는 자신이 참조하는 객체의 소멸을 대신해주는 똑똑한 포인터이다.                        
-쉽게 말하면 포인터처럼 동작하게끔 만든 클래스이자 객체이다.            
-대신 개발자가 세부적으로 정의를 할 수 있으므로 똑똑한 포인터라고 명칭한 것이다.           
-      
-## 3.6. new 연산자 오버로딩에 대한 상세한 이해   
+포인터 처럼 동작하는,                  
+포인터보다 다소 똑똑하게 동작하는 객체를 가리켜 스마트 포인터라 한다.                      
+                   
+ ![cpp82](https://user-images.githubusercontent.com/50267433/75664173-5f8af680-5cb5-11ea-97a6-b8b26f51eb11.PNG)          
+                 
+위의 스마트 포인터는 자신이 참조하는 객체의 소멸을 대신해주는 똑똑한 포인터이다.                              
+쉽게 말하면 포인터처럼 동작하게끔 만든 클래스이자 객체이다.                  
+대신 개발자가 세부적으로 정의를 할 수 있으므로 똑똑한 포인터라고 명칭한 것이다.                  
+                
+코드를 분석해보자면 클래스 내에는 포인터형 변수가 존재하고            
+포인터 연산자 오버로딩을 이용해서 포인터 연산자의 특성인 '대상'을 return 받아서 '대상'을 기준으로 처리를 진행한다.             
+             
+우선 객체 생성시 생성자에 가리킬 대상을 인자로 주입시켜준다.      
+이를 통해 내부 포인터 변수가 해당 객체를 가리키는 형태가 되었다.        
+그리고 이러한 포인터 변수를 통해서 다양한 포인터 연산을 활용할 수 있는데      
+예를 들면 ```sptr->showPos()```같은 경우도               
+```sptr->```에서 ```sptr.operator->()```이 호출되고 반환된 대상을 통해 ```showPos()```를 호출한다.           
+         
+         
+## 3.6. new 연산자 오버로딩에 대한 상세한 이해    
 ## 3.7. new 연산자 오버로딩에 대한 상세한 이해   
