Update 11 연산자 오버로딩2.md

--- a/11 연산자 오버로딩2.md
+++ b/11 연산자 오버로딩2.md
@@ -221,6 +221,11 @@ void * operator new[] (size_t size) {. . . . . .}
 예를 들면 ```sptr->showPos()```같은 경우도               
 ```sptr->```에서 ```sptr.operator->()```이 호출되고 반환된 대상을 통해 ```showPos()```를 호출한다.           
          
-         
+그렇다면 무엇이 똑똑하냐?   
+소멸자를 분석해보면 내가 참조하는 대상에 delete 연산을 진행하고 있다.  
+ 
+이는 다시 생각해보면 외부에서 생성된 객체를 스마트 포인터가 참조할 뿐인데      
+이를 스마트 포인터가 소멸되면서 동시에 같이 삭제해주는 메모리 누수를 방지해준다.    
+
 ## 3.6. new 연산자 오버로딩에 대한 상세한 이해    
 ## 3.7. new 연산자 오버로딩에 대한 상세한 이해   
