--- a/11 연산자 오버로딩2.md
+++ b/11 연산자 오버로딩2.md
@@ -227,5 +227,97 @@ void * operator new[] (size_t size) {. . . . . .}
 이는 다시 생각해보면 외부에서 생성된 객체를 스마트 포인터가 참조할 뿐인데      
 이를 스마트 포인터가 소멸되면서 동시에 같이 삭제해주는 메모리 누수를 방지해준다.    
 
-## 3.6. new 연산자 오버로딩에 대한 상세한 이해    
-## 3.7. new 연산자 오버로딩에 대한 상세한 이해   
+## 3.6. 연산자의 오버로딩과 펑터(Functor)   
+     
+![cpp83](https://user-images.githubusercontent.com/50267433/75679627-590b7780-5cd3-11ea-8659-5b12c6003c32.PNG)        
+        
+**```()```연산자의 오버로딩**      
+* 객체를 함수처럼 사용할 수 있게 하는 오버로딩            
+* 객체의 멤버함수를 함수처럼 호출할 수 있게 하는 오버로딩       
+
+**adder가 객체의 이름이라면**   
+```adder(2,4);```와 같이 함수처럼 사용을 한다.  
+그리고 이는 ```adder.operator()(2,4);```로 해석이 된다.
+   
+이렇듯 함수처럼 호출이 가능한 객체를 가리켜 ```Functor```라 부른다.     
+      
+```
+class Adder
+{
+public:             
+    int operator()(int a, int b)
+    {
+        return n1+n2;
+    }
+    double operator()(const double& e1, const double& e2)
+    {
+        return e1+e2;
+    }
+    Point operator()(const Point& pos1, const Point& pos2)
+    {
+        return pos1+pos2
+    }
+}
+```
+```
+int main(void)
+{
+    Adder adder;
+    cout<<adder(1, 3)<<endl;
+    cout<<adder(1.5, 3.7)<<ednl;
+    cout<<adder(Point(3,4), Point(7,9))
+}
+```
+객체에 ```()```를 사용하는 것이므로 생성자로 헷갈릴만 하지만 ```functor```는 객체를 목적이 아니므로     
+객체생성을 해서 초기화 또는 대입하는 것이면 생성자로 추측하고  
+return 값이 boolean 이거나 리터럴 값인 경우 functor로 추측이 가능하다.   
+   
+이러한 functor는 주로 조건의 기준으로 사용된다. 
+
+## 3.7. Functor의 위력 (조건의 기준)   
+   
+![cpp84](https://user-images.githubusercontent.com/50267433/75682143-48a9cb80-5cd8-11ea-919b-f05b8caccc0e.PNG)      
+    
+위 코드를 간단히 해석하면         
+메소드에서는 SortRule형 객체를 인자로 받을 수 있고            
+이 SortRule형 참조 변수인 functor 를 이용하여 ```if``` 조건식의 판단을 내린다.        
+
+여기서 SortRule을 상속받는 클래스는 2개인데 하나는 오름차순 하나는 내림차순으로 나타내는 값을 리턴한다.  
+
+즉, fuctor의 반환값에 따라 분기가 나뉘어진다고 생각하면 된다.(오름차순 할거냐 내림차순 할거냐 등)   
+
+## 3.8. 임시객체로의 자동 형 변환   
+     
+![cpp85](https://user-images.githubusercontent.com/50267433/75682825-67f52880-5cd9-11ea-9ebb-45cbb24bdc4a.PNG)   
+      
+1. num 객체 생성   
+```
+Number num;
+```
+    1. ```cout<<"Number(int n=0)"<<ednl``` 진행    
+       
+2. num 객체에 정수 할당      
+```num=30```               
+하지만 사실 ```=```은 양측의 타입이 일치해야 한다.               
+그렇기에 이를 자동 형 변환을 시켜 ```num = Number(30);```형태를 띄게 하였다.            
+          
+3. ```=```연산 진행          
+```=```연산을 진행하니 ```operator=``` 형태로 호출                   
+즉, ```num.operator=(Number(30))``` 으로 동작                 
+    1. ```Number(30)``` 진행 -> ```cout<<"Number(int n=0)"<<ednl``` 진행        
+    2. ```num.operator()``` 진행 -> ```cout<<"operator()"<<endl``` 진행                 
+    3. ```num = ref.num``` 진행 -> ```cout<<"Number(int n=0)"<<ednl``` 진행     
+       
+4. ```num.ShowNumber();```진행         
+단순히 메소드 호출            
+    1. ```cout<<num<<endl``` 호출            
+  
+**결과**  
+```
+Number(int n=0)
+Number(int n=0)
+operator=()
+Number(int n=0)
+50
+```
+
