Update 11 연산자 오버로딩2.md

--- a/11 연산자 오버로딩2.md
+++ b/11 연산자 오버로딩2.md
@@ -294,8 +294,8 @@ return 값이 boolean 이거나 리터럴 값인 경우 functor로 추측이 가
 ```
 Number num;
 ```
-    1. ```cout<<"Number(int n=0)"<<ednl``` 진행    
-       
+```cout<<"Number(int n=0)"<<ednl``` 진행    
+
 2. num 객체에 정수 할당      
 ```num=30```               
 하지만 사실 ```=```은 양측의 타입이 일치해야 한다.               
