Update 11 연산자 오버로딩2.md

--- a/11 연산자 오버로딩2.md
+++ b/11 연산자 오버로딩2.md
@@ -290,6 +290,16 @@ return 값이 boolean 이거나 리터럴 값인 경우 functor로 추측이 가
      
 ![cpp85](https://user-images.githubusercontent.com/50267433/75682825-67f52880-5cd9-11ea-9ebb-45cbb24bdc4a.PNG)   
       
+```
+int main(void)
+{
+    Number num;
+    num=30;
+    num.ShowNumber();
+    return 0;
+}
+```
+      
 1. num 객체 생성   
 ```
 Number num;
@@ -306,7 +316,6 @@ Number num;
 즉, ```num.operator=(Number(30))``` 으로 동작                 
     1. ```Number(30)``` 진행 -> ```cout<<"Number(int n=0)"<<ednl``` 진행        
     2. ```num.operator()``` 진행 -> ```cout<<"operator()"<<endl``` 진행                 
-    3. ```num = ref.num``` 진행 -> ```cout<<"Number(int n=0)"<<ednl``` 진행     
        
 4. ```num.ShowNumber();```진행         
 단순히 메소드 호출            
@@ -317,7 +326,60 @@ Number num;
 Number(int n=0)
 Number(int n=0)
 operator=()
+30
+```
+ 
+## 3.9. 형 변환 연산자의 오버로딩     
+![cpp86](https://user-images.githubusercontent.com/50267433/75684798-d7204c00-5cdc-11ea-9004-f5d4ed8b85ee.PNG)    
+   
+```
+int main(void)
+{
+    Number num1;
+    num1=30;
+    Number num2=num1+20; 
+    num2.ShowNumber();
+    return 0;
+}
+```
+   
+1. num 객체 생성   
+```
+Number num1;
+```
+```cout<<"Number(int n=0)"<<ednl``` 진행    
+
+2. num 객체에 정수 할당      
+```num1=30```               
+하지만 사실 ```=```은 양측의 타입이 일치해야 한다.               
+그렇기에 이를 자동 형 변환을 시켜 ```num1 = Number(30);```형태를 띄게 하였다.              
+       
+3. ```num1+20``` 먼저 진행         
+```+```연산자 이지만 양 측의 피연산자의 자료형이 다르니 형변환 진행            
+하지만 형변환 연산자를 오버로딩 했으므로```(operator int())``` int 형으로 반환을 한다.             
+참고로 이러한 연산자는 해당하는 연산자에 오버로딩이 정의되지 않았을시에 작동하는 것을 알 수 있다.             
+즉, ```num1```이 정수형으로 반환되어 ```30+20```으로 진행      
+   
+4. ```=```연산 진행              
+```=```연산을 진행하니 ```operator=``` 형태로 호출                       
+즉, ```num2.operator=(50)``` 으로 동작                   
+    1. num2 객체가 존재해야 하므로 생성자 호출 -> ```cout<<"Number(int n=0)"<<ednl``` 진행      
+    2. ```num.operator()``` 진행 -> ```cout<<"operator()"<<endl``` 진행                   
+    3. 반환이 되었을 때 더이상 연산을 진행하지만 않지만 그래도 허공에라도 메모리를 반환하니      
+     ```cout<<"Number(int n=0)"<<ednl``` 진행       
+          
+4. ```num.ShowNumber();```진행            
+단순히 메소드 호출              
+    1. ```cout<<num<<endl``` 호출      
+        
+```
+Number(int n=0)
+Number(int n=0)
+operator=()
 Number(int n=0)
 50
 ```
+   
+
+
 
