--- a/13 템플릿.md
+++ b/13 템플릿.md
@@ -1,9 +1,14 @@
 13 템플릿
 =======================
-# 1. 템플릿에 대한 이해와 함수 
-> 인용
-## 1.1. 소 주제
-### 1.1.1. 내용1
+# 1. 템플릿에 대한 이해와 함수 템플릿
+## 1.1. 함수를 대상으로 템플릿 이해하기 
+함수는 매개변수의 자료형에 따라서 오버로딩을 할 수 있는 조건이 성립된다.   
+하지만 이에 대해서 일일이 코드를 작성해준다는 것은 매우 불필요한 일이며   
+기본 자료형이 아닌 사용자 정의 자료형도 존재하기에 이를 수용할 범위는 매우 넓어진다.     
+템플릿은 이러한 불편함을 해결하고자 등장했다.      
+      
+템플릿은 특정 자료형에 얽매이지 않는 메소드를 정의하기 위한 문법이다.     
+
 ```
 내용1
 ```
