--- a/13 템플릿.md
+++ b/13 템플릿.md
@@ -7,13 +7,23 @@
 기본 자료형이 아닌 사용자 정의 자료형도 존재하기에 이를 수용할 범위는 매우 넓어진다.     
 템플릿은 이러한 불편함을 해결하고자 등장했다.      
       
-템플릿은 특정 자료형에 얽매이지 않는 메소드를 정의하기 위한 문법이다.     
+![cpp93](https://user-images.githubusercontent.com/50267433/76312639-cee89200-6316-11ea-8ab7-309930899d41.PNG)   
+         
+템플릿은 특정 자료형에 얽매이지 않는 메소드를 정의하기 위한 문법이다.          
+우리는 이러한 템플릿 선언으로 알맞는 메소드를 생성하여 호출하는 것이다.        
+(템플릿은 함수와 엄연히 다르다 그렇기에 '함수 템플릿'이라는 명칭을 사용한다.)     
 
+**함수 템플릿**
 ```
-내용1
+template <typename T>
+T Function(T val1, T val2)
+{
+      .     .     .     .
+}
 ```
-## 1.2. 소 주제
-### 1.2.1. 내용1
+
+## 1.2. 컴파일러가 생성하는 템플릿 기반 함수
+
 ```
 내용1
 ```
