--- a/13 템플릿.md
+++ b/13 템플릿.md
@@ -2,17 +2,17 @@
 =======================
 # 1. 템플릿에 대한 이해와 함수 템플릿
 ## 1.1. 함수를 대상으로 템플릿 이해하기 
-함수는 매개변수의 자료형에 따라서 오버로딩을 할 수 있는 조건이 성립된다.   
-하지만 이에 대해서 일일이 코드를 작성해준다는 것은 매우 불필요한 일이며   
-기본 자료형이 아닌 사용자 정의 자료형도 존재하기에 이를 수용할 범위는 매우 넓어진다.     
-템플릿은 이러한 불편함을 해결하고자 등장했다.      
-      
-![cpp93](https://user-images.githubusercontent.com/50267433/76312639-cee89200-6316-11ea-8ab7-309930899d41.PNG)   
-         
-템플릿은 특정 자료형에 얽매이지 않는 메소드를 정의하기 위한 문법이다.          
-우리는 이러한 템플릿 선언으로 알맞는 메소드를 생성하여 호출하는 것이다.        
-(템플릿은 함수와 엄연히 다르다 그렇기에 '함수 템플릿'이라는 명칭을 사용한다.)     
-
+함수는 매개변수의 자료형에 따라서 오버로딩을 할 수 있는 조건이 성립된다.    
+하지만 이에 대해서 일일이 코드를 작성해준다는 것은 매우 불필요한 일이며      
+기본 자료형이 아닌 사용자 정의 자료형도 존재하기에 이를 수용할 범위는 매우 넓어진다.      
+템플릿은 이러한 불편함을 해결하고자 등장했다.        
+        
+![cpp93](https://user-images.githubusercontent.com/50267433/76312639-cee89200-6316-11ea-8ab7-309930899d41.PNG)     
+           
+템플릿은 특정 자료형에 얽매이지 않는 메소드를 정의하기 위한 문법이다.             
+우리는 이러한 템플릿 선언으로 알맞는 메소드를 생성하여 호출하는 것이다.          
+(템플릿은 함수와 엄연히 다르다 그렇기에 '함수 템플릿'이라는 명칭을 사용한다.)        
+     
 **함수 템플릿**
 ```
 template <typename T>
@@ -23,10 +23,20 @@ T Function(T val1, T val2)
 ```
 
 ## 1.2. 컴파일러가 생성하는 템플릿 기반 함수
-
 ```
-내용1
+template <typename T>
+T Function(T val1, T val2)
+{
+      .     .     .     .
+}
 ```
+![cpp94](https://user-images.githubusercontent.com/50267433/76313067-94cbc000-6317-11ea-82f2-a22d78f3fbc7.PNG)    
+      
+앞서 정의한 템플릿을 기준으로 자료형에 맞는 메소드를 생성한다.            
+여기서 중요한 점은 메소드의 형태를 보게되면 ```<자료형>```을 가지는데 이는       
+일반 메소드와 템플릿 메소드를 구분하는 중요한 기준점으로 사용되므로              
+명확히 나타내주기 위해서 템플릿 메소드를 정의하게 된다면 거의 무조건 정의해주는 편이 좋다.       
+        
 
 ***
 # 2. 대주제
