--- a/13 템플릿.md
+++ b/13 템플릿.md
@@ -33,11 +33,16 @@ T Function(T val1, T val2)
 ![cpp94](https://user-images.githubusercontent.com/50267433/76313067-94cbc000-6317-11ea-82f2-a22d78f3fbc7.PNG)    
       
 앞서 정의한 템플릿을 기준으로 자료형에 맞는 메소드를 생성한다.            
-여기서 중요한 점은 메소드의 형태를 보게되면 ```<자료형>```을 가지는데 이는       
-일반 메소드와 템플릿 메소드를 구분하는 중요한 기준점으로 사용되므로              
-명확히 나타내주기 위해서 템플릿 메소드를 정의하게 된다면 거의 무조건 정의해주는 편이 좋다.       
-        
-
+```
+int Function<int>(int val1, int val2)
+{
+      .     .     .     .
+}
+```  
+여기서 중요한 점은 메소드의 형태를 보게되면 ```<자료형>```을 가지는데 이는         
+일반 메소드와 템플릿 메소드를 구분하는 중요한 기준점으로 사용되므로                
+명확히 나타내주기 위해서 템플릿 메소드를 정의하게 된다면 거의 무조건 정의해주는 편이 좋다.          
+  
 ***
 # 2. 대주제
 > 인용
