--- a/13 템플릿.md
+++ b/13 템플릿.md
@@ -39,10 +39,31 @@ int Function<int>(int val1, int val2)
       .     .     .     .
 }
 ```  
-여기서 중요한 점은 메소드의 형태를 보게되면 ```<자료형>```을 가지는데 이는         
-일반 메소드와 템플릿 메소드를 구분하는 중요한 기준점으로 사용되므로                
-명확히 나타내주기 위해서 템플릿 메소드를 정의하게 된다면 거의 무조건 정의해주는 편이 좋다.          
+여기서 중요한 점은 메소드의 형태를 보게되면 ```<자료형>```을 가지는데     
+이는 일반 메소드와 템플릿 메소드를 구분하는 중요한 기준점으로 사용되므로                     
+명확히 나타내주기 위해서 템플릿 메소드를 정의하게 된다면 기술해주는 편이 좋다.              
+     
+## 1.3. '메소드템플릿'을 이용하여 '템플릿메소드' 생성하여 호출하기  
+```
+int Function<int>(int val1, int val2)
+{
+      .     .     .     .
+} 
+```
+앞서 메소드템플릿을 통해 생성되는 템플릿메소드는 위와 같은 형태를 띄우고 있다.       
+    
+**그렇다면 메소드를 호출하는 형태도 ```<자료형>```을 붙여주어야 하나?**     
+정답만 말하자면 **YES** 즉, ```메소드<자료형>()```으로 호출해주는 것이 좋다.     
+    
+![cpp95](https://user-images.githubusercontent.com/50267433/76313791-fcced600-6318-11ea-96a1-69eda775bff5.PNG)        
+     
+우선 ```<자료형>```을 생략한 상태로도 호출이 가능하다.          
+이는 기본 자료형일 경우에 해당되는 이야기이며 대개 기본 자료형이 매개변수로 들어가면 연관되기 때문이다.       
+     
+하지만 앞서 말했듯이 명확하지도 않으며 사용자 정의 자료형도 존재하므로          
+이럴 경우에는 무조건 적으로 ```메소드<자료형>()```으로 호출해주는 것이 좋다.       
   
+   
 ***
 # 2. 대주제
 > 인용
