--- a/13 템플릿.md
+++ b/13 템플릿.md
@@ -62,16 +62,57 @@ int Function<int>(int val1, int val2)
      
 하지만 앞서 말했듯이 명확하지도 않으며 사용자 정의 자료형도 존재하므로          
 이럴 경우에는 무조건 적으로 ```메소드<자료형>()```으로 호출해주는 것이 좋다.       
+       
+## 1.4. 둘 이상의 자료형에 대해 템플릿 선언하기  
+우선 이번장에서는 앞서 말했던 ```메소드<자료형>()```으로 호출하는 이유에 대해서 설명하고 있다.  
+![cpp96](https://user-images.githubusercontent.com/50267433/76314104-8aaac100-6319-11ea-90a4-0daf30230b6c.PNG)      
+                   
+기존 선언과 차이점은         
+```template <typename T>```과 달리     
+```template <class T1, class T2>``` class 키워드를 이용하여 사용을 한다.       
+그리고 템플릿에 관해서도 매개변수를 템플릿형이 아닌 기본 자료형으로 선언을 해도 된다는 것을 나타낸다.   
+                   
+이 예제를 통해서 알 수 있는 점은 기존에 ```<자료형>```을 생략하게 된다면    
+컴파일러 입장에서는 ```double```로만 정의되어 있는 템플릿 메소드를 호출할 것인지  
+아니면 위의 예제를 호출할지를 명확히 구분할줄 모르므로 우리는 ```메소드<자료형>()```으로 호출하는 것이 좋다.  
+    
+## 1.5. 함수 템플릿의 특수화 
+                            
+![cpp97](https://user-images.githubusercontent.com/50267433/76316687-58e82900-631e-11ea-8c37-c575ab2cd656.PNG)    
   
-   
-***
-# 2. 대주제
-> 인용
-## 2.1. 소 주제
-### 2.1.1. 내용1
+위 그림에서 보면 문자열이 들어갔을 경우 기존 템플릿에 정의된 메소드의 절차를 수행하기가 힘들다.       
+특수화는 이러한 예외상황을 해결하기 위해 사용된다.                
+    
+![cpp98](https://user-images.githubusercontent.com/50267433/76317462-96998180-631f-11ea-8c47-bbdef55cf4af.PNG)   
+    
+**특수화 선언 방법**  
 ```
-내용1
-```   
+template <>
+자료형 메소드이름(매개변수)
+{
+        .       .       .       .       
+}
+```
+특수화는 생각보다 어렵지 않다.      
+메소드템플릿으로 생성될 템플릿메소드를 먼저 정의해준다는 식으로 이해를 하면 된다.            
+단 ```template <>```으로 지정하듯이 ```typename```이나 ```class```는 기술하지 않는다.        
+         
+위 코드에서는 문자열을 수정하는 경우와 그렇지 않은 경우 2가지로 나뉘어질 수 있어 const 선언 유무로 2번 정의했다.              
+              
+![cpp99](https://user-images.githubusercontent.com/50267433/76318059-7918e780-6320-11ea-8571-b6bc2c2c220e.PNG)       
+       
+기존에 작성된 방식은 특수화 하는 자료형의 정보를 생략했지만         
+앞서 말했듯이 명확히 작성하는 것이 좋은 방법이기에 명시하도록 하자      
+   
+      
+***  
+# 2. 클래스 템플릿     
+## 2.1. 클래스 템플릿의 정의      
+
+
+
+
+
 
 ***
 # 3. 대주제
