--- a/13 템플릿.md
+++ b/13 템플릿.md
@@ -108,17 +108,41 @@ template <>
 ***  
 # 2. 클래스 템플릿     
 ## 2.1. 클래스 템플릿의 정의      
-
-
-
-
-
-
-***
-# 3. 대주제
-> 인용
-## 3.1. 소 주제
-### 3.1.1. 내용1
+![cpp100](https://user-images.githubusercontent.com/50267433/76318710-779bef00-6321-11ea-889f-1e91b865000a.PNG)        
+클래스 템플릿은 한마디로 비유하자면 과일 상자이다.                      
+그리고 그 과일상자에 들어가는 과일들은 템플릿이다.           
+무슨 뜻이냐면 어떠한 과일을 담을 과일 상자로 담으면 과일 상자에는 해당 과일만 들어 갈 것이다.        
+        
+클래스 템플릿도 마찬가지이다.            
+클래스에 특정 템플릿을 지정해주게 된다면 특정 자료형을 지정해주면 클래스 내에서 해당 자료형을 사용할 수 있다.       
+        
+## 2.2. 클래스 템플릿의 선언과 정의의 분리     
+![cpp101](https://user-images.githubusercontent.com/50267433/76319216-3ce68680-6322-11ea-8ac2-a07d8ce85443.PNG)     
+       
+```h 파일```과 ```c 파일``` 양측에서 ```template T```를 사용하므로 템플릿 선언을 해주어야한다.        
+하지만 뒤에 나올 내용이지만 혼란을 이야기할 수 있기에 먼저 말을 하겠다.   
+``` 
+템플릿은 헤더 파일과 클래스 파일로 나뉘어서 정의하면 안된다.
 ```
-내용1
-```
+우선은 정의가 가능하다는 가정하에 이야기를 해보려 하는 것이다.        
+         
+클래스 템플릿에 정의되어 있는 메소드템플릿이라 하여 ```클래스::메소드``` 형태로 호출을 하게 된다면              
+이는 단순히 클래스내의 일반 메소드를 호출하기에 메소트템플릿이 호출이 되지 않는다.               
+              
+그렇기에  ```클래스<자료형>::메소드```의 형태로 호출을 진행해주어야 템플릿메소드를 호출한다.          
+   
+## 2.3. 헤더파일과 소스파일의 구분     
+![cpp102](https://user-images.githubusercontent.com/50267433/76319880-30aef900-6323-11ea-9e51-ceae9cfbf393.PNG)    
+앞서 말했듯이 ```c 파일```과 ```h 파일```로 나누면 오류가 발생한다 그 이유는?        
+       
+![cpp103](https://user-images.githubusercontent.com/50267433/76320016-62c05b00-6323-11ea-81a8-a635621988ff.PNG)   
+   
+컴파일러는 1개의 파일을 기준으로 코드를 수행한다.(물론 링커라는 친구도 존재하지만....)   
+템플릿은 c 언어의 구조체와 비슷하게 작동을 한다.   
+즉, ```h 파일```에 선언된 메소드를 ```c 파일```에서 정의를 했지만     
+컴파일러가 코드를 컴파일 할 때 ```h 파일```의 정보만 읽어들어서 템플릿메소드의 정의는 읽지 못한다.   
+(링커가 동작 안하는건지 이런건 조금 더 자세히 알아봐야겠다.)   
+
+그렇기에 우리는 
+헤더 파일에 클래스 템플릿을 정의할 때 정의부를 같이 기술하던가     
+```c 파일```이더라도 이를 include 해야 된다.               
