--- a/14 템플릿2.md
+++ b/14 템플릿2.md
@@ -1,1 +1,59 @@
+14 템플릿2
+=======================
+# 1. 탬플릿 심화
+## 1.1. Point 클래스 템플릿과 배열 클래스 템플릿 
+![cpp104](https://user-images.githubusercontent.com/50267433/76391060-f3457c80-63b1-11ea-8070-3a66477b2c4b.PNG)    
+      
+일반적인 배열 클래스 템플릿이다.        
+자료형에 따라 선언만 다르게 해주면 다양한 자료형의 클래스를 생성해준다.         
+        
+**그렇다면 포인터 자료형도 가능한가?** 정답은 **가능하다.**    
+```
+Point<int>* iarr(50);
+```   
+      
+우리는 앞서 클래스를 대상으로 클래스 템플릿을 작성했다.       
+그렇다면 이러한 클래스를 멤버로 가지는 클래스를 사용한다면 어떻게 되겠는가?           
+즉, 어떤 템플릿 클래스를 대상으로 하는 템플릿 클래스를 말하는 것이다.          
+사실 어렵게 생각할 필요는 없다.         
+그저 우리가 선언하던데로 ```<>```에 클래스 템플릿을 넣어주면 되기 때문이다.           
+          
+```
+BoundCheckArray<Point<int>*> iarr(50);
+```
+    
+하지만 이러한 표현 방법보다는 typedef를 이용한 것이 가독성이 좋기에 이를 활용하는 것도 좋은 방법이다.  
+    
+```
+typedef Point<int>* POINT_PTR
+BoundCheckArray<POINT_PTR> iarr(50);
+```
+     
 
+### 1.1.1. 내용1
+```
+내용1
+```
+## 1.2. 소 주제
+### 1.2.1. 내용1
+```
+내용1
+```
+
+***
+# 2. 대주제
+> 인용
+## 2.1. 소 주제
+### 2.1.1. 내용1
+```
+내용1
+```   
+
+***
+# 3. 대주제
+> 인용
+## 3.1. 소 주제
+### 3.1.1. 내용1
+```
+내용1
+```
