--- a/14 템플릿2.md
+++ b/14 템플릿2.md
@@ -28,26 +28,40 @@ BoundCheckArray<Point<int>*> iarr(50);
 typedef Point<int>* POINT_PTR
 BoundCheckArray<POINT_PTR> iarr(50);
 ```
-     
 
-### 1.1.1. 내용1
-```
-내용1
-```
-## 1.2. 소 주제
-### 1.2.1. 내용1
-```
-내용1
-```
-
+## 1.2. 템플릿 클래스 대상의 함수선언과 friend 선언     
+![cpp105](https://user-images.githubusercontent.com/50267433/76391703-6a2f4500-63b3-11ea-8a8b-f0001a0d541d.PNG)     
+        
+우선 템플릿 클래스 또한 매개변수 및 반환형으로 지정하여 사용도 가능하고       
+이러한 함수를 대상으로도 friend 선언을 할 수 있다.       
+즉, 템플릿 클래스도 일반 자료형과 차별을 받지 않는다는 것이다.          
+       
+friend 선언은 선언 대상에 대해서 현재 클래스의 private 접근을 허락해주는 것이다.       
+위 코드에서 보면 해당 메소드에 firend 선언을 했으므로       
+외부에서 해당 메소드를 정의할 때 private 멤버 변수를 접근할 수 있도록 해준다.     
+      
 ***
-# 2. 대주제
-> 인용
-## 2.1. 소 주제
-### 2.1.1. 내용1
-```
-내용1
-```   
+# 2. 클래스 템플릿 특수화   
+## 2.1. 클래스 템플릿 특수화  
+![cpp106](https://user-images.githubusercontent.com/50267433/76392787-9e0b6a00-63b5-11ea-84d4-65b1429823a2.PNG)
+     
+* 클래스 템플릿을 특수화 하는 이유는        
+특정 자료형으로 생성된 객체에 대해, 구분이 되는 다른 행동 양식을 적용하기 위함이다.        
+   
+* 함수 템플릿을 특수화하는 방법과 이유, 그리고 클래스 템플릿을 특수화하는 방법과 이유는 동일하다.  
+    
+## 2.2. 클래스 템플릿의 부분 특수화   
+![cpp107](https://user-images.githubusercontent.com/50267433/76392934-e1fe6f00-63b5-11ea-9568-abd0c62729fb.PNG)
+     
+만약 클래스 템플릿에 자료형이 2개일 경우는 어떻게 하는가?          
+답은 간단하다 우리는 ```template <typename T1, typename T2>```을 정의해주면 된다.           
+         
+그런데 이중에서 전부가 아닌 일부분만 특수화로 지정을 하고 싶으면 어떻게 해야하는가?         
+눈치를 챘듯이 부분 템플릿을 사용해주면 된다.            
+           
+부분 템플릿은 일부분에 관해서만 템플릿을 사용하기에 나머지 부분은 자료형을 기술해주면 된다.      
+그리고 일부분에 관해서 템플릿을 사용하므로  ```template <....>```을 알맞게 기술해주어여 한다.    
+
 
 ***
 # 3. 대주제
