--- a/15 예외처리.md
+++ b/15 예외처리.md
@@ -111,7 +111,44 @@ C++ 프로그램의 동작 프로세스는 스택을 기반으로 하고 있기 
 ## 3.5. 하나의 try 블록과 다수의 catch 블록      
      
 ![cpp122](https://user-images.githubusercontent.com/50267433/76519958-45b39580-64a5-11ea-87ea-24abacbe7fc1.PNG)   
+하나의 try 영역 내에서 종류가 다른 둘 이상의 예외가 발생할 수 있기 때문에,   
+하나의 try 블록에 다수의 catch 블록을 추가할 수 있다.   
+     
+## 3.6. 전달되는 예외의 명시     
+         
+![cpp123](https://user-images.githubusercontent.com/50267433/76521495-4a2d7d80-64a8-11ea-84f8-d67bf1d4cb96.PNG)      
+
+```
+int simpleFunc(void) throw(int, char)
+{
+     .    .    .    .    .
+}
+```
+
+함수에 전달되는 예외를 명시해줄 수 있다.      
+즉, 함수 내에서 발생하는 예외가 무엇이다를 지정해주는 것이다.       
+이렇게 정의 할 경우 해당 예외가 발생하면 이를 호출한 곳을 예외 데이터를 전달하지만     
+정의되지 않은 예외가 발생하면 프로그램을 종료시킨다.       
+      
+프로그램을 종료시키기에 좋지 않다고 볼 수 있지만 이는 완전 반대이다.      
+      
+예상 가능한 예외를 처리를 진행하고 예상치 못한 예외 발생시 프로그램을 종료시켜     
+정의된 예외처리에 대해서 안정성을 띄우며 예상치 못한 예외를 발견할 수도 있고      
+예외에 대해 명확히 표현할 수 있다.    
    
+```
+int simpleFunc(void) throw()
+{
+     .    .    .    .    .
+}
+```
+이렇게 아무 자료형도 정의 해주지 않을 수 있는데       
+이는 소스코드에 에러 상황이 없다고 말을 해주는 것이다.     
+즉, 에러가 있으면 ```terminate``` 발생해 프로그램을 종료시킬 것이다.      
+    
+## 3.7. 예외 클래스와 예외 객체   
+
+
 
 
 
