--- a/15 예외처리.md
+++ b/15 예외처리.md
@@ -146,9 +146,9 @@ int simpleFunc(void) throw()
 이는 소스코드에 에러 상황이 없다고 말을 해주는 것이다.     
 즉, 에러가 있으면 ```terminate``` 발생해 프로그램을 종료시킬 것이다.      
     
-## 3.7. 예외 클래스와 예외 객체   
-
-
+***
+# 4. 예외상황을 표현하는 예외 클래스의 설계       
+## 4.1. 예외 클래스와 예외객체     
 
 
 
