--- a/15 예외처리.md
+++ b/15 예외처리.md
@@ -149,7 +149,53 @@ int simpleFunc(void) throw()
 ***
 # 4. 예외상황을 표현하는 예외 클래스의 설계       
 ## 4.1. 예외 클래스와 예외객체     
+* **예외 객체:** 예외발생을 알리는데 사용되는 객체    
+* **예외 클래스:** 예외객체의 생성을 위해 정의된 클래스    
+    
+객체를 이용해서 예외 상황을 알리면 예외가 발생한 원인에 대한 정보를 자세히 담을 수 있다.     
+   
+![cpp124](https://user-images.githubusercontent.com/50267433/76676152-d43e2900-6603-11ea-85d9-517c3dd8131e.PNG)   
+     
+## 4.2. 예외 클래스 기반의 예외처리       
+![cpp125](https://user-images.githubusercontent.com/50267433/76676189-51699e00-6604-11ea-8326-b346c45f6202.PNG)
+   
+```if 조건문```을 통하여 해당 상황에 맞는 예외객체를 생성해서 넘겨주고 있다.  
+            
+## 4.3. 상속관계에 있는 예외 클래스       
+![cpp126](https://user-images.githubusercontent.com/50267433/76676208-9097ef00-6604-11ea-8b93-efb946545f6d.PNG)
 
-
+연관된 클래스들을 묶어주는 상속과 이를 이용한 다형성을 활용하여    
+상위클래스 참조변수만을 사용하여 여러 연관된 에러 객체를 참조하고 표현할 수 있다.    
+   
+## 4.4. 예외의 전달방식에 따른 주의사항      
+![cpp127](https://user-images.githubusercontent.com/50267433/76676359-e620cb80-6605-11ea-97fe-7486b521ac0b.PNG)    
+   
+다형성을 이용할 때 주의점이 있다.      
+바로 ```catch 구문```은 맨위에서부터 아래로 적절한 ```catch 블록```을 찾아 내려오기 때문이다.      
+즉, 상위 클래스를 처음으로 정의하면 밑에 있는 하위 클래스의 ```catch 구문```이 실행이 되지 않을 것이다.       
+    
+그러므로 다형성을 이용한 여러 catch 구문을 작성할 때에는 
+      
+***
+# 5. 예외처리와 관련된 또 다른 특성들      
+## 5.1. new 연산자에 의해서 전달되는 예외    
+![cpp128](https://user-images.githubusercontent.com/50267433/76676483-5419c280-6607-11ea-8227-7f8266de3a64.PNG)
+new 연산자 진행시 더이상 메모리가 남아있지 않을 경우 자동으로 ```bad_alloc``` 예외를 발생시킨다.      
+    
+## 5.2. 모든 예외를 처리하는 catch 블록        
+![cpp129](https://user-images.githubusercontent.com/50267433/76676532-bc68a400-6607-11ea-830b-e91e61c990d2.PNG)        
+마지막 ```catch 블록```에 덧붙여지는 경우가 많다. (순차적으로 내려오는 catch의 특성 이용)                
+   
+사실상 변수 선언이 되어있지 않기에 이를 이용한 예외처리를 진행하지 못한다.      
+즉, 발생한 예외와 관련해서 그 어떠한 정보도 받을 수 없으며, 전달된 예외의 종류도 구분이 불가능하다.   
+         
+## 5.3. 예외 던지기         
+catch 블록에 전달된 예외는 다시 던져질 수 있다.       
+그리고 이로 인해서 하나의 예외가 둘 이상의 catch 블록에 의해서 처리되게 할 수 있다.          
+```(catch에서 trhow 를 쓸 수 있다는 것이다)```       
+        
+![cpp130](https://user-images.githubusercontent.com/50267433/76676688-5f6ded80-6609-11ea-9c3c-d2ebae5b0527.PNG)       
+       
+   
 
 
