Update 16 C++형 변환 연산자와 맺는 글.md

--- a/16 C++형 변환 연산자와 맺는 글.md
+++ b/16 C++형 변환 연산자와 맺는 글.md
@@ -1,1 +1,89 @@
+16 C++형 변환 연산자와 맺는 글
+=======================
+# 1. C++에서의 형 변환 연산
+## 1.1. 모기약을 잡으려면 모기약을 써야지~ 
+기존 'C 언어'에서는 ```()```를 이용하여 형 변환을 진행하였다.      
+    
+![cpp131](https://user-images.githubusercontent.com/50267433/76681112-cb188080-6632-11ea-90a0-7795cabe5699.PNG)    
+   
+그러나 위 그림과 같이 형변환을 진행하였을 경우 아래와 같이 2가지 문제가 발생한다.
+   
+1. 프로그래머가 의도한 형변환인지 구분이 불가능     
+2. 프로그래머의 실수이지만 컴파일 에러를 일으키지 않음   
+   
+그렇기에 C++에서는 이러한 형변환에 관해서 4가지 연산자를 제공하고 있다.     
+![cpp132](https://user-images.githubusercontent.com/50267433/76681226-2303b700-6634-11ea-9aac-f74cd4d8baca.PNG)    
+    
+## 1.2. dynaminc_cast    
+**dynaminc_cast:** 상속관계에서의 안전한 형 변환         
+       
+![cpp133](https://user-images.githubusercontent.com/50267433/76681243-547c8280-6634-11ea-9d1a-6832e5628a22.PNG)      
+      
+클래스 상속 관계에 있어서 형 변환 조건은          
+자식클래스 참조변수를 부모 클래스형으로 언제든지 형변환이 가능하지만                
+부모클래스 참조변수를 자식 클래스형으로 형변환은 참조 객체의 자료형에 따라 다르다.               
+       
+**안전한 형 변환이란?**      
+자식클래스 참조변수를 부모 클래스형으로 언제든지 형변환이 가능하듯 형변환의 안정성이 확보된 것을 의미                  
+즉, 안정성이 보장된 자식클래스 참조변수를 부모 클래스형으로의 변환만 허용을 한다.   
 
+## 1.3. static_cast    
+**static_cast:**: 상속관계에서의 강제 형 변환       
+![cpp134](https://user-images.githubusercontent.com/50267433/76681686-f30ae280-6638-11ea-993c-3c9a84857019.PNG)      
+      
+static_cast는 상송관계에서 강제 형 변환을 지원한다.       
+즉, 안전하든 안전하지 않든 상속에 관한 모든 관계에 대해서 형변환을 가능케 한다.        
+단, 이렇게 사용할 경우 프로그래머가 형변환에 대한 책임을 지어야 한다.           
+
+## 1.4. static_cast 기본 자료형 간 변환      
+![cpp135](https://user-images.githubusercontent.com/50267433/76681949-1b93dc00-663b-11ea-869b-a330c14edce1.PNG)      
+         
+**static_cast** 연산자는 ‘기본 자료형 간의 형 변환’과 ‘클래스의 상속관계에서의 형 변환’만 허용한다.         
+그렇기에 주로 기본 자료형 간의 형 변환에서 사용된다.       
+    
+그런데 기본 자료형을 사용하는 것이면 기본 형변환을 사용하는게 더 편하지 않나 싶은데        
+기본 형 변환을 사용할 경우 ```const 해제```가 가능해져 코드의 위험성을 높일 수 있다.       
+그렇기에 제한적으로 허용하는 static_cast 연산자가 훨씬 안정적이다.        
+    
+## 1.5. const_cast
+**const_cast:** const를 제거한 자료형으로 변환해준다.          
+![cpp136](https://user-images.githubusercontent.com/50267433/76682044-f6ec3400-663b-11ea-8f65-175efac5e776.PNG)    
+     
+## 1.6. reinterpret_cast      
+**reinterpret_cast:** 아무런 제약 조건 없이 강제 형 변환해준다.            
+![cpp137](https://user-images.githubusercontent.com/50267433/76682076-34e95800-663c-11ea-8c66-231c290b1926.PNG)        
+              
+reinterpret_cast는 아무런 제약 조건 없이 강제 형 변환을 진행한다.  
+그렇기에 형 변환의 결과는 예측하기 힘들고 이 또한 개발자가 책임을 지어야 한다.    
+위 그림은 그나마 이러한 reinterpret_cast를 이용한 적절한 사용법을 말해주고 있다.   
+   
+## 1.7. dynaminc_cast 2번째 이야기: PolyMorphic 클래스  
+   
+![cpp138](https://user-images.githubusercontent.com/50267433/76682162-0455ee00-663d-11ea-8dea-af4704039b1c.PNG)      
+   
+**PolyMorphic 클래스:** virtual 가상 함수가 존재하는 클래스를 PolyMorphic 클래스라 한다.         
+이러한 PolyMorphic 클래스일 경우는 부모클래스 자료형에서 자식 클래스로의 형 변환이 가능하다.        
+        
+## 1.8. dynamic_cast와 static_cast의 차이
+상위 클래스가 Polymorphic 클래스라면      
+자식 클래스의 포인터 및 참조형으로의 형 변환에는 dynamic_cast 연산자와 static_cast 연산자 모두 사용할 수 있다.     
+(Polymorphic 클래스는 자식클래스로의 형 변환을 가능케 해주기에)       
+      
+하지만 여전히 dynamic_cast 연산자는 안전성을 보장한다.         
+반면 static_cast 연산자는 안전성을 보장하지 않는다.      
+       
+![cpp139](https://user-images.githubusercontent.com/50267433/76682243-b097d480-663d-11ea-90ad-6591d4e8c042.PNG)      
+         
+일반 클래스의 dynamic_cast 연산자는 위의 형 변환을 허용하지 않는다.        
+반면 static_cast 연산자는 허용을 한다. (물론 그 결과는 보장받지 못한다.)      
+     
+## 1.9. bad_cast 예외  
+       
+![cpp140](https://user-images.githubusercontent.com/50267433/76682260-d329ed80-663d-11ea-85bf-5075d3438808.PNG)          
+          
+참조자 ref가 실제 참조하는 대상이 SoSimple 객체이기 때문에 SoComplex 참조형으로의 형 변환은 안전하지 못하다.         
+그리고 참조자를 대상으로는 NULL을 반환할 수 없기 때문에 이러한 상황에서는 bad_cast 예외가 발생한다.           
+         
+즉, bad_cast는 참조자를 기준으로 형 변환을 진행하려는데 형 변환에 실패할 경우 생성되는 객체이다.         
+컴파일러가 자동으로 생성하는 에러 객체이므로 catch 구문만 기술하여 처리해주면 된다.       
+       
